feat: Implemented Task 8, 9, and 10 functionalities, including SMS integration, offline support, and test suite. Updated Taskmaster statuses to done. Added comprehensive README and deployment guide.

--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
 GOOGLE_API_KEY="AIzaSyAVEeJwy3cEAyFGoTOVUIbcx5u2s9WfJlQ"
+
+# Twilio Configuration
+TWILIO_ACCOUNT_SID=ACXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
+TWILIO_AUTH_TOKEN=XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
+TWILIO_PHONE_NUMBER=+1234567890
