--- a/kataria-school-frontend/package.json
+++ b/kataria-school-frontend/package.json
@@ -16,6 +16,9 @@
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.5"
   },
+  "engines": {
+    "node": "20.x"
+  },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
     "@tailwindcss/postcss": "^4.1.16",
