--- a/kataria-school-frontend/package.json
+++ b/kataria-school-frontend/package.json
@@ -8,12 +8,16 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "init-tailwind": "tailwindcss init -p"
+    "init-tailwind": "tailwindcss init -p",
+    "validate:translations": "node scripts/validate-translations.js"
   },
   "dependencies": {
+    "i18next": "^25.6.2",
+    "i18next-browser-languagedetector": "^8.2.0",
     "lucide-react": "^0.552.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-i18next": "^16.3.1",
     "react-router-dom": "^7.9.5"
   },
   "engines": {
